force-app/main/default/objects/Account/fields/BB_Id__c.field-meta.xml
<CustomField>
    <fullName>BB_Id__c</fullName>
    <externalId>true</externalId>
    <label>BB Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>