force-app/main/default/objects/Account/fields/Best_Gift_Year__c.field-meta.xml
<CustomField>
    <fullName>Best_Gift_Year__c</fullName>
    <label>Best Gift Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>