force-app/main/default/objects/Account/fields/Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>Constituent_ID__c</fullName>
    <externalId>true</externalId>
    <label>Constituent ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>