force-app/main/default/objects/Account/fields/Current_Year_Gift_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Gift_Count__c</fullName>
    <label>Current Year Gift Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>