force-app/main/default/objects/Account/fields/First_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Date__c</fullName>
    <label>First Gift Date</label>
    <type>Date</type>
</CustomField>