force-app/main/default/objects/Account/fields/Frequency_Score__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Score__c</fullName>
    <label>Frequency Score</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>