force-app/main/default/objects/Account/fields/Gift_Count__c.field-meta.xml
<CustomField>
    <fullName>Gift_Count__c</fullName>
    <label>Gift Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>