force-app/main/default/objects/Account/fields/Gifts_Last_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gifts_Last_Year_Amount__c</fullName>
    <label>Gifts Last Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>