force-app/main/default/objects/Account/fields/GiftsThisYearAmount__c.field-meta.xml
<CustomField>
    <fullName>GiftsThisYearAmount__c</fullName>
    <label>Gifts This Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>