force-app/main/default/objects/Account/fields/GiftsTwoYearsAgoAmount__c.field-meta.xml
<CustomField>
    <fullName>GiftsTwoYearsAgoAmount__c</fullName>
    <label>Gifts Two Years Ago Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>