force-app/main/default/objects/Account/fields/HighestGiftAmount__c.field-meta.xml
<CustomField>
    <fullName>HighestGiftAmount__c</fullName>
    <label>HighestGiftAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>