force-app/main/default/objects/Account/fields/HighestGiftYearAmount__c.field-meta.xml
<CustomField>
    <fullName>HighestGiftYearAmount__c</fullName>
    <label>HighestGiftYearAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>