force-app/main/default/objects/Account/fields/LastGiftAmount__c.field-meta.xml
<CustomField>
    <fullName>LastGiftAmount__c</fullName>
    <label>LastGiftAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>