force-app/main/default/objects/Account/fields/LastGiftDate__c.field-meta.xml
<CustomField>
    <fullName>LastGiftDate__c</fullName>
    <label>LastGiftDate</label>
    <type>Date</type>
</CustomField>