force-app/main/default/objects/Account/fields/LastTwoYearGiftCount__c.field-meta.xml
<CustomField>
    <fullName>LastTwoYearGiftCount__c</fullName>
    <label>LastTwoYearGiftCount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>