force-app/main/default/objects/Account/fields/LastYearGiftCount__c.field-meta.xml
<CustomField>
    <fullName>LastYearGiftCount__c</fullName>
    <label>LastYearGiftCount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>