force-app/main/default/objects/Account/fields/LowestGiftAmount__c.field-meta.xml
<CustomField>
    <fullName>LowestGiftAmount__c</fullName>
    <label>LowestGiftAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>