force-app/main/default/objects/Account/fields/MonetaryScore__c.field-meta.xml
<CustomField>
    <fullName>MonetaryScore__c</fullName>
    <label>MonetaryScore</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>