force-app/main/default/objects/Account/fields/RecencyScore__c.field-meta.xml
<CustomField>
    <fullName>RecencyScore__c</fullName>
    <label>RecencyScore</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>