force-app/main/default/objects/Account/fields/TotalGiftsAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalGiftsAmount__c</fullName>
    <label>Total Gifts Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>